test: update BrandServiceTest to match current implementation and remove integration tests